<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
      <groupId>org.alfresco</groupId>
      <artifactId>alfresco-super-pom</artifactId>
      <version>10</version>
   </parent>
   <artifactId>alfresco-search-and-insight-parent</artifactId>
   <version>1.4.2-RC1</version>
   <packaging>pom</packaging>
   <name>Alfresco Search And Insight Parent</name>
   <distributionManagement>
      <repository>
         <id>alfresco-internal</id>
         <url>https://artifacts.alfresco.com/nexus/content/repositories/enterprise-releases/</url>
      </repository>
      <snapshotRepository>
         <id>alfresco-internal-snapshots</id>
         <url>https://artifacts.alfresco.com/nexus/content/repositories/enterprise-snapshots/</url>
      </snapshotRepository>
   </distributionManagement>
   <scm>
      <connection>scm:git:https://git.alfresco.com/search_discovery/insightengine.git</connection>
      <developerConnection>scm:git:https://git.alfresco.com/search_discovery/insightengine.git</developerConnection>
      <url>https://git.alfresco.com/search_discovery/insightengine.git</url>
      <tag>1.4.2-RC1</tag>
   </scm>
   <properties>
      <java.version>11</java.version>
      <solr.base.version>6.6.5</solr.base.version>
      <solr.version>${solr.base.version}-patched.2</solr.version>
      <!-- The location to download the solr zip file from. -->
      <!-- <solr.zip>https://archive.apache.org/dist/lucene/solr/${solr.version}/solr-${solr.version}.zip</solr.zip> -->
      <!-- Solr startup scripts do not work with any Java version higher than 9 so the scripts have been patched -->
      <solr.zip>https://artifacts.alfresco.com/nexus/content/repositories/public/org/apache/solr/solr/solr-${solr.version}/solr-solr-${solr.version}.zip</solr.zip>
      <solr.directory>${project.build.directory}/solr-${solr.version}</solr.directory>
   </properties>
   <modules>
      <module>search-services</module>
      <module>insight-engine</module>
      <module>e2e-test</module>
   </modules>
   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
            <configuration>
               <release>${java.version}</release>
               <target>${java.version}</target>
               <showWarnings>true</showWarnings>
               <showDeprecation>true</showDeprecation>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-failsafe-plugin</artifactId>
            <version>2.22.2</version>
            <executions>
               <execution>
                  <goals>
                     <goal>integration-test</goal>
                     <goal>verify</goal>
                  </goals>
               </execution>
            </executions>
            <configuration>
               <runOrder>alphabetical</runOrder>
            </configuration>
         </plugin>
      </plugins>
   </build>
   <dependencies>
     <!-- Used to declare false positives for FindBugs -->
      <dependency>
        <groupId>findbugs</groupId>
        <artifactId>annotations</artifactId>
        <version>1.0.0</version>
        <scope>provided</scope>
      </dependency>
   </dependencies>
</project>
